[package]
name = "leadpipe-wordgrid"
version = "0.9.0"
edition = "2021"
description = "A word-finding game."
repository = "https://github.com/leadpipe/wordgrid/"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.13.0"
chrono = "0.4"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3.55"
multiset = "0.0.5"
qp-trie = {version = "0.8.0", features = []}
rand = {version = "0.8.5", features = []}
rand_distr = "0.4.3"
rand_pcg = "0.3.1"
rand_seeder = "0.2.3"
serde = {version = "1.0", features = ["derive"]}
wasm-bindgen = {version = "0.2.63", features = ["serde-serialize"]}

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

[dev-dependencies]
criterion = "0.3"
wasm-bindgen-test = "0.3.13"

[profile.release]
lto = true  # link-time opt
opt-level = "s"  # small code size.
# debug = true

[profile.bench]
debug = true
