[package]
name = "leadpipe-wordgrid"
version = "1.0.0"
edition = "2021"
description = "A word-finding game."
repository = "https://github.com/leadpipe/wordgrid/"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.22"
chrono = "0.4"
getrandom = { version = "0.2", features = ["js"] }
histogram = "0.10"
js-sys = "0.3"
multiset = "0.0.5"
qp-trie = {version = "0.8", features = []}
rand = {version = "0.8", features = []}
rand_distr = "0.4"
rand_pcg = "0.3"
rand_seeder = "0.2"
serde = {version = "1.0", features = ["derive"]}
serde-wasm-bindgen = "0.6.0"
sif = "0.1"
static_assertions = "1.1"
thousands = "0.2"
wasm-bindgen = "0.2"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
criterion = "0.5"
wasm-bindgen-test = "0.3"

[profile.release]
lto = true  # link-time opt
opt-level = "s"  # small code size.
# debug = true

[profile.bench]
debug = true
